org.jgrapes.webconsole.base/resources/org/jgrapes/webconsole/base/console.css
/*
 * JGrapes Event Driven Framework
 * Copyright (C) 2016, 2019  Michael N. Lipp
 *
 * This program is free software; you can redistribute it and/or modify it 
 * under the terms of the GNU Affero General Public License as published by 
 * the Free Software Foundation; either version 3 of the License, or 
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful, but 
 * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
 * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License 
 * for more details.
 *
 * You should have received a copy of the GNU Affero General Public License along 
 * with this program; if not, see <http://www.gnu.org/licenses/>.
 */

/* 
 * # Basic, framework independent table style.
 *
 * Very basic table styling that should make simple tables look good
 * in any context. 
 */
:not(.table--no-basic-style) thead th {
    white-space: nowrap;
} 

:not(.table--no-basic-style) table:not(.table--no-basic-style) {
    display: block;
    overflow-x: auto;
}

:not(.table--no-basic-style) thead th {
    white-space: nowrap;
} 

:not(.table--no-basic-style) thead th.sortable {
    cursor: pointer;
}

:not(.table--no-basic-style) thead th:not(:last-child) {
    padding-right: 1em;
} 

:not(.table--no-basic-style) tbody td:not(:last-child) {
    padding-right: 1em;
} 

.table--basic--striped tbody tr.even {
    background-color: rgba(0,0,0,.05);
}

.table--basic--autoStriped tbody tr:nth-of-type(2n+1) {
    background-color: rgba(0,0,0,.05);
}

/*
 * # Markup mostly forms.
 */

form:not(.form--no-markup-styles) {
	box-sizing: border-box;
}

form:not(.form--no-markup-styles) * {
    box-sizing: border-box;
}

form:not(.form--no-markup-styles) input,
form:not(.form--no-markup-styles) textarea,
form:not(.form--no-markup-styles) select {
    position: relative; /* Puts element on top of the others. */
}

form:not(.form--no-markup-styles) fieldset {
    display: inline-block;
}

/* Use of unnumbered list to specify inputs. */
form:not(.form--no-markup-styles) fieldset ul {
    list-style: none;
}

form:not(.form--no-markup-styles) label > * {
	display: inline-block;
}

form:not(.form--no-markup-styles) label > input[type="radio"],
form:not(.form--no-markup-styles) label > input[type="checkbox"],
form:not(.form--no-markup-styles) input[type="radio"] + span,
form:not(.form--no-markup-styles) input[type="checkbox"] + span {
    vertical-align: middle;
}

form:not(.form--no-markup-styles) label textarea {
    vertical-align: top;
}

/* Use form__fieldset--horizontal to layout legend and inputs side-by-side. */
form:not(.form--no-markup-styles) fieldset.form__fieldset--horizontal {
    display: inline-block;
    vertical-align: middle;
}
    
form:not(.form--no-markup-styles) fieldset.form__fieldset--horizontal label,
form:not(.form--no-markup-styles) label.form__label--horizontal {
    display: inline-flex;
    align-items: center;
    vertical-align: middle;
}
    
form:not(.form--no-markup-styles) fieldset.form__fieldset--horizontal label > :not(:first-child),
form:not(.form--no-markup-styles) label.form__label--horizontal > :not(:first-child) {
    margin-left: 0.25rem;
}
    
form:not(.form--no-markup-styles) fieldset.form__fieldset--horizontal > span {
    display: inline-flex;
}

form:not(.form--no-markup-styles) fieldset.form__fieldset--horizontal > span > legend {
    display: inline;
}

form:not(.form--no-markup-styles) label.form__label--full-width {
    display: flex;
    align-items: center;
}

form:not(.form--no-markup-styles) label.form__label--full-width > :nth-child(2) {
    flex-grow: 1;
}

form:not(.form--no-markup-styles) label.form__label--top-aligned {
    display: block;
}

/* div cannot be used in label context. */
form:not(.form--no-markup-styles) label.form__label--top-aligned > :nth-child(2) {
    display: block;
    width: 100%;
}

form:not(.form--no-markup-styles) label.form__label--top-aligned > :nth-child(1) {
    margin-right: 0.25em;
}

form:not(.form--no-markup-styles) label.form__label--top-aligned > :nth-child(2) {
    flex-grow: 1;
}

/* # Deprecated, kept for backward compatibility. */
.jgconsole-basic-table thead th {
    white-space: nowrap;
} 

.jgconsole-basic-table {
    display: block;
    overflow-x: auto;
}

.jgconsole-basic-table thead th {
    white-space: nowrap;
} 

.jgconsole-basic-table thead th.sortable {
    cursor: pointer;
}

.jgconsole-basic-table thead th:not(:last-child) {
    padding-right: 1em;
} 

.jgconsole-basic-table tbody td:not(:last-child) {
    padding-right: 1em;
} 

.jgconsole-striped-table tbody tr.even {
    background-color: rgba(0,0,0,.05);
}

.jgconsole-auto-striped-table tbody tr:nth-of-type(2n+1) {
    background-color: rgba(0,0,0,.05);
}

